# slow-art-online

./: README.md  app.py  checklist.md  pyproject.toml  requirements.txt
static/: scripts.js  styles.css
templates/: about.html  index.html  layout.html  random-image.html  reading-room.html
